--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.0.0-alpha.8",
+    "async": "^3.2.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "express": "^5.0.0-alpha.8",
     "http-assert": "^1.4.1",
     "inflection": "^1.12.0",
     "jsonwebtoken": "^8.5.1",
